@@ -1,0 +1,15 @@
+<?xml version="1.0"?>
+
+<project name="mail-test" basedir="." default="test1">
+
+  <target name="test1">
+    <!-- this test is supposed to bring a build exception because user and password is not allowed with plain encoding -->
+    <mail host="localhost" port="25" from="joe@abc.com" to="laura@xyz.com" subject="hello" encoding="plain" user="joe" password="secret">
+        <message>
+            Hi Laura, how are you doing ?
+        </message>
+    </mail>
+  </target>
+
+
+</project>
